fix: overflow

--- a/src/app/styles/globals.sass
+++ b/src/app/styles/globals.sass
@@ -3,7 +3,6 @@
 
 .ant-table
   height: 24rem !important
-  overflow-x: hidden
 .ant-pagination
   margin: 0
   display: inline-block
